# dhakacart-api

./: .env.example  .gitignore  .mypy.ini  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 20260104_2128-9bf1d59b7ed5_initial_setup.py  20260110_0109-0db9aa345f9c_create_users_table.py
src/: main.py
src/application/dto/requests/: auth_request.py  user_request.py
src/application/dto/responses/: auth_response.py  user_response.py
src/application/interfaces/: token_service.py
src/application/use_cases/user/: login_user.py  register_user.py
src/core/: config.py  constants.py  logging.py  security.py
src/domain/entities/: __init__.py  user.py
src/domain/exceptions/: auth.py  base.py  user.py
src/domain/repositories/: user_repository.py
src/infrastructure/: __init__.py
src/infrastructure/database/: __init__.py  connection.py  session.py
src/infrastructure/orm/: __init__.py  base.py  user_model.py
src/infrastructure/repositories/sqlalchemy/: user_repository_impl.py
src/infrastructure/services/: jwt_service.py
src/presentation/api/v1/routers/: auth.py
